2020-06-14 Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/Foundation/NSKeyedArchiver.h
	* Source/NSKeyedArchiver.m
	* Source/NSKeyedUnarchiver.m: Add setter for requiresSecureCoding.

2020-06-11  Frederik Seiffert <frederik@algoriddim.com>

	* Source/NSValueTransformer.m:
	Fix recursive creation of value transformers.
	* Tests/base/NSValueTransformer/basic.m:
	Add tests for NSValueTransformer.

2020-06-06  Frederik Seiffert <frederik@algoriddim.com>

	* Source/NSBundle.m: Extend NSBundle resources support to handle
	directories in Android assets.
	* Source/NSFileManager.m: Fix NSFileManager -isReadableFileAtPath:
		to also support directories in Android assets.

2020-06-05  Frederik Seiffert <frederik@algoriddim.com>

	* Tests/base/NSMapTable/weakObjects.m,
	* Source/NSConcreteMapTable.m:
	Add test for and fix replacing an existing value in a weak objects map
	table.

2020-05-25  Frederik Seiffert <frederik@algoriddim.com>

	* Source/NSUserDefaults.m:
	Store NSNumber instead of NSString for NSUserDefaults -setBool:forKey:.

2020-05-23  Frederik Seiffert <frederik@algoriddim.com>

	* Headers/GNUstepBase/GSConfig.h.in,
	* Source/GSNetwork.h,
	* Source/win32/GSFileHandle.m,
	* config/config.reuseaddr.c:
	Include winsock2.h before windows.h, as required by MSYS2/MinGW-w64.

2020-05-14  Frederik Seiffert <frederik@algoriddim.com>

	* Headers/Foundation/NSException.h:
	Fix BASE_NATIVE_OBJC_EXCEPTIONS check with OBJC_ZEROCOST_EXCEPTIONS.

2020-05-13  Frederik Seiffert <frederik@algoriddim.com>

	* Source/win32/GSFileHandle.m:
	* Source/win32/NSMessagePort.m:
	Fix building Win32 classes with nonfragile ABI.

2010-05-12 Riccardo Mottola <rm@gnu.org>

	* Source/NSFileManager.m:
	In changeFileAttributes implement setting of creation date also for
	Unix, which needs to be done before setting the modification date.
	Also, implement reading the creation (birth time) date if a supported
	method was detected.

2010-05-12 Riccardo Mottola <rm@gnu.org>

	* configure